@@ -34,7 +34,7 @@
 	}
 	</script>
 
-	<link href ="modules/GEDFact_assistant/_CENS/css/cens_styles.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href ="modules/GEDFact_assistant/_CENS/css/cens_core_called.css" rel="stylesheet" type="text/css" media="screen" />
 
 	<form id="censdates" name="censdates">
 		<select onchange =	"if (this.options[this.selectedIndex].value!='') {
